--- a/seattle_cycle.Rmd
+++ b/seattle_cycle.Rmd
@@ -95,6 +95,8 @@ arch <- gcIntermediate(all_top_trips[c('from_long', 'from_lat')],
 arch_fortified <- ldply(arch@lines, fortify)
 ```
 
+Finaly we can plot.
+
 ```{r}
 # source the theme_map for ggplot2
 source("https://dl.dropboxusercontent.com/u/2364714/theme_map.R")
